--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #161d6f;
+  background-color: rgb(11, 44, 100);
   color: #fff;
   padding: 40px 0 20px;
   margin-top: 40px;
