--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   overflow-x: hidden;
-  background-color: #98ded9;
+  background-color: #ffff;
 }
 
 .App {
