--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,8 @@
 .header {
   width: 100%;
-  background-color: rgba(11, 47, 159, 0.8);
-  color: #fff;
+  background-color: #ffff;
+
+  color: black;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
@@ -41,7 +42,7 @@
   left: 0;
   height: 100%;
   width: 250px;
-  background: linear-gradient(to bottom, #1e3a6e, #004d99);
+  background: linear-gradient(#ffff, #ffff);
   padding: 2rem 1rem;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
   transform: translateX(0px);
@@ -60,7 +61,7 @@
 }
 
 .nav ul li a {
-  color: #fff;
+  color: black;
   text-decoration: none;
   font-weight: bold;
   font-size: 1rem;
@@ -72,15 +73,16 @@
   text-align: center;
   overflow: hidden; /* To contain the pseudo-element */
   width: 180px;
+  border-radius: 20%;
 }
 
 .nav ul li a.highlighted {
-  color: #fff; /* Text color for highlighted item */
-  border-top: 2px solid #227b94;
-  border-bottom: 2px solid #227b94;
-  background-color: #161d6f; /* Neon blue background */
+  color: #ffff; /* Text color for highlighted item */
+  border-top: 2px solid #0b2c64;
+  border-bottom: 2px solid #0b2c64;
+  background-color: (217, 136, 185); /* Neon blue background */
   font-size: 1rem; /* Larger font size for the highlighted item */
-  box-shadow: 0 0 15px #161d6f; /* Glowing effect */
+  box-shadow: 0 0 15px #0b2c64; /* Glowing effect */
   letter-spacing: 0.1em;
 }
 
@@ -91,7 +93,7 @@
   left: 50%;
   width: 150%; /* Larger width for the glowing effect */
   height: 150%; /* Larger height for the glowing effect */
-  background: #9eb371; /* Neon glow */
+  background: #0b2c64; /* Neon glow */
   border-radius: 50%; /* Circular glow */
   transform: translate(-50%, -50%) scale(1.3); /* Center and scale up */
   z-index: -1;
@@ -103,7 +105,7 @@
 }
 
 .whatsapp-button {
-  background-color: #0b2f9f;
+  background-color: #0b2c64;
   color: #fff;
   padding: 8px 15px;
   border-radius: 50%;
@@ -119,7 +121,7 @@
 .menu-toggle {
   background: none;
   border: none;
-  color: #fff;
+  color: black;
   font-size: 1.5rem;
   cursor: pointer;
 }
