--- a/src/pages/aboutpage/aboutPage.css
+++ b/src/pages/aboutpage/aboutPage.css
@@ -5,7 +5,7 @@
 }
 
 .colorful-bar-about {
-  background: linear-gradient(90deg, #0b2f9f 0%, #98ded9 100%);
+  background: linear-gradient(90deg, #0b2f9f 0%, #3327e6 100%);
   height: 150px;
   display: flex;
   justify-content: center;
@@ -13,6 +13,7 @@
   margin-bottom: 40px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: #ffff;
 }
 
 .logo {
@@ -22,13 +23,32 @@
 }
 
 .introduction,
-.stats,
-.global-reach {
+.stats {
+  margin-top: 20px;
   background-color: #ffffff;
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 40px;
+}
+
+.stats {
+  background-color: rgba(11, 44, 100, 0.8);
+  color: #fff;
+}
+
+.global-reach {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 5px;
+}
+
+.global-reach img {
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .introduction h1,
@@ -53,14 +73,14 @@
 }
 
 .stat-item h3 {
-  color: #1a3a6e;
+  color: #ffff;
   margin-bottom: 10px;
 }
 
 .stat-item span {
   font-size: 2.5rem;
   font-weight: bold;
-  color: #00a8ff;
+  color: #fff;
 }
 
 @media (max-width: 768px) {
@@ -73,9 +93,12 @@
   }
 
   .introduction,
-  .stats,
-  .global-reach {
+  .stats {
     padding: 20px;
+  }
+  .global-reach {
+    flex-direction: column;
+    gap: 5px;
   }
 
   .stats {
