--- a/src/pages/contactpage/contactpage.css
+++ b/src/pages/contactpage/contactpage.css
@@ -7,7 +7,7 @@
 }
 
 .colorful-bar-contact {
-  background: linear-gradient(90deg, #0b2f9f 0%, #98ded9 100%);
+  background: linear-gradient(90deg, rgba(11, 44, 100, 0.8) 0%, #2015c5 100%);
   height: 150px;
   display: flex;
   justify-content: center;
@@ -15,6 +15,7 @@
   margin-bottom: 40px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: #ffff;
 }
 .contact-details {
   display: flex;
@@ -30,7 +31,7 @@
 }
 
 .details-container h1 {
-  color: #1a3a6e;
+  color: #ffff;
   margin-bottom: 20px;
   font-size: 2rem;
   animation: fadeIn 1s ease-in-out;
@@ -60,7 +61,7 @@
 .form-container {
   width: 100%;
   max-width: 600px;
-  background-color: #f0f8ff;
+  background-color: rgba(11, 44, 100, 0.8);
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -113,6 +114,9 @@
   border-radius: 10px;
   margin-top: 20px;
   animation: fadeIn 1s ease-in-out;
+}
+.form-container h2 {
+  color: #ffff;
 }
 
 @keyframes fadeIn {
