--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -31,29 +31,30 @@
 .mission-vision {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 40px;
-  margin-left: 30px;
   margin-top: 20px;
   color: #ffff;
 }
 
 .mission,
 .vision {
+  min-height: 300px;
   flex-basis: 48%;
   padding: 20px;
   box-shadow: 10px 0 20px rgb(11, 44, 100, 0.2);
-  border-radius: 20px 0 20px 0;
-  background-color: rgb(11, 44, 100, 0.8);
+  border-radius: 50px 0 50px 0;
+  background-color: rgb(11, 44, 100, 0.7);
 }
 
 .core-val {
-  background-color: rgb(11, 44, 100, 0.8);
+  background-color: rgb(11, 44, 100, 0.7);
 }
 .core-val,
 .core-val-img {
   flex-basis: 48%;
   padding: 20px;
-  border-radius: 20px 0 20px 0;
+  border-radius: 50px 0 50px 0;
   box-shadow: 10px 0 20px rgb(11, 44, 100, 0.2);
 }
 
@@ -63,7 +64,7 @@
 .core-val h2,
 .core-val-img h2 {
   color: black;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .core-val p,
 .core-val-img p {
@@ -72,13 +73,13 @@
 }
 .core-val-img {
   padding: 0;
+  margin-top: 10px;
 }
 .animated-img {
   width: 100%;
-  height: 500px;
-  border-style: ridge;
-  border-radius: 20px 0 20px;
-
+  height: 510px;
+  border-style: dotted;
+  border-radius: 50px 0 50px;
   transition: transform 0.3s ease, margin 0.3s ease;
   overflow: hidden;
   object-fit: cover;
@@ -188,6 +189,16 @@
   animation: rotate 6s linear infinite, pulse 2s ease-in-out infinite,
     float 3s ease-in-out infinite;
 }
+.main-image {
+  margin-top: 20px;
+}
+
+.main-image img {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  overflow: hidden;
+}
 
 @keyframes rotate {
   0% {
@@ -247,7 +258,8 @@
   }
 
   .animated-img {
-    height: 200px;
+    height: 300px;
+    transition: none;
   }
   .animated-divider img {
     margin-bottom: 10px;
@@ -265,5 +277,12 @@
 
   .middle-div-h3 h3 {
     font-size: 16px;
+  }
+  .core-val-img {
+    margin-top: 40px;
+    width: 100%;
+  }
+  .main-image img {
+    height: 250px;
   }
 }
